fixing links too close to scroll

--- a/src/app/components/shared/navbar/navbar.scss
+++ b/src/app/components/shared/navbar/navbar.scss
@@ -88,7 +88,7 @@ $shadow-navbar: 0 2px 4px rgba(0, 0, 0, 0.1);
   .links-area {
     display: flex;
     // gap: 30px;
-    width: 35%;
+    width: 33%;
     justify-content: space-between;
     flex-wrap: wrap;
   }
